<resources>
    <string name="app_name">Bookscape</string>
    <string name="get_started">Get Started</string>
    <string name="goeasy">Bookscape</string>
    <string name="login_to_goeasy">Bookscape</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="not_a_registered_user_register_here">Register Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_here">Register Here</string>
    <string name="remember_me">Remember me</string>
    <string name="search">Search</string>
    <string name="new_releases">New Releases</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="computer_science">Computer Science</string>
    <string name="gv">GV</string>
    <string name="janu">Janu</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="editprofile">Editprofile</string>
    <string name="changepassword">ChangePassword</string>
    <string name="about">This app is developed to cater to the readers who cannot afford to access their beloved books anytime they want.With this app readers can carry thousands of e-books in their pockets with complete ease and free of cost.It provides readers with a seamless and fantastical reading experience on a single click. </string>

</resources>